--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -14,7 +14,7 @@
 <body>
 <div class="header">
 <p class="head"> Current Events </p>
-<a href="index" id="lo">Logout</a>
+<a href="/index" id="lo">Logout</a>
 </div>
 
 
