--- a/public/Master.css
+++ b/public/Master.css
@@ -440,23 +440,24 @@ table thead tr {
 }
 
 .table button {
-  padding: 6px 20px;
+  padding: 6px 18px;
   border-radius: 10px;
   cursor: pointer;
   background: transparent;
   border: 1px solid #1d1b31;
+  left: 30px;
 }
 
 .table button:hover {
-  background: #1d1b31;
+  background: #03a92f;
   color: #fff;
-  transition: 0.5rem;
+  transition: 0.5s;
 }
 
 #ban:hover {
   background: #d44a4a;
   border-color: #d44a4a;
-  color: #fff;
+  color: #000000;
   transition: 0.5s;
 }
 
