--- a/views/MyAccount.ejs
+++ b/views/MyAccount.ejs
@@ -227,7 +227,7 @@
   <input type="password" id="newpassword" name="newpassword"><br>
   
   <label for="phone">Phone Number:</label><br>
-  <input type="number" id="phone" name="phone"><br>
+  <input type="number" id="phone" name="PhoneNumber"><br>
   
   <button >Update</button>
 </form> 
