--- a/views/Browse.ejs
+++ b/views/Browse.ejs
@@ -67,7 +67,7 @@
       
             <div class="card">
                 <div class="side_img">
-                    <img id="pic" src="<%= event.image %>">
+                    <img id="pic" src="/materials/<%= event.image %>">
                 </div>
                 <div class="side_info">
                     <div class="info">
