--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -25,7 +25,7 @@
     <% events.forEach(function(event) { %>
       <div class="card">
         <div class="side_img">
-          <img id="pic" src="<%= event.image %>">
+          <img id="pic" src="/materials/<%= event.image %>">
         </div>
         <div class="side_info">
           <div class="info">
@@ -58,7 +58,7 @@
         <div class ="formation"  >
             <form action="/ADMIN/ADD-TICKETS" method="post">
                 <div class="container">
-                    <input type="text" id="file" name="image" >
+                    <input type="file" id="file" name="image" style="display: none;" >
        
         <div class="img-area" data-img="">
 			<i class='bx bxs-cloud-upload icon'></i>
