Send FeedBack to Database

--- a/views/Store.ejs
+++ b/views/Store.ejs
@@ -37,22 +37,11 @@
 
         <div class="R-A">
             <a id="loginbutton" href="login">Login</a>
-            <div class="shopping" id="cart">
-                <img src="/materials/Cart.PNG" alt="Cart">
-                <span class="quantity">0</span>
-            </div>
+        
         </div>
     </div>
 
-    <div class="cart">
-        <h1>cart</h1>
-        <ul class="listcart">
-        </ul>
-        <div class="checkOut">
-            <div class="total">0</div>
-            <div class="closeShopping">Close</div>
-        </div>
-    </div>
+    
 
 
     <div class="Store">
@@ -90,7 +79,7 @@
                                 <h2 name="productPrice" style="color:green;">
                                     <%= team.productPrice %> EGP
                                 </h2>
-                                <a id="BUYNOW">BUY NOW</a>
+                                <h2>📍Available in all of our E7gzli stores</h2>
                             </div>
                         </span>
                     </div>
