--- a/public/Master.css
+++ b/public/Master.css
@@ -94,6 +94,7 @@
   transition: 0s;
 }
 
+
 .sidebar li:hover .tooltip {
   opacity: 1;
   pointer-events: auto;
@@ -119,6 +120,35 @@
   transition: all 0.5s ease;
   background: #1d1b31;
 }
+
+
+.ffoorrmm inputs{
+border: #000000;
+border-style:outset;
+border-radius: 16px;
+
+}
+
+
+.ffoorrmm textarea{
+  width: 100%;
+border-style:solid;
+border-radius: 13px;
+}
+.ffoorrmm button{
+  position: relative;
+  left: 70%;
+  bottom: 10%;
+  border-radius: 16px;
+  size: 80px;
+ 
+}
+#nominees{
+  border-radius: 16px;
+  width: 200px;
+}
+
+
 
 .sidebar.open input {
   padding: 0 20px 0 50px;
@@ -148,6 +178,10 @@
 .nav-list ::placeholder{
   color:white;
 }
+
+
+
+
 
 .sidebar li i {
   height: 50px;
@@ -1030,22 +1064,9 @@ form input[type="number"] {
   left: 10%;
 }
 
-.img-area {
-  margin-top: 15%;
-  position: flex;
-  width: 100%;
-  height: 35%;
-  background: var(--grey);
-  margin-bottom: 3%;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
 
 .img-area .icon {
-  font-size: 10vw;
+  font-size: 30vw;
 }
 
 .img-area h3 {
