fixed error in adding product

--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -270,18 +270,18 @@
         <% } %>
       
         <div class="form-container" id="addProfileForm">
-          <form id="addProfileFormmm" method="post" action="/Master/STORE" enctype="multipart/form-data">
+          <form id="addProfileFormmm" method="post" action="/Master/STORE" >
             <label for="bannerColor">Banner Color:</label>
             <input type="color" name="bannerColor" id="bannerColor"><br>
       
             <label for="profilePic">Profile Picture:</label>
-            <input type="file" name="ProductImage" id="profilePic"><br>
+            <input type="file" name="teamImage" id="profilePic"><br>
       
             <label for="profileInfo-display">Profile Info Display:</label>
-            <input type="text" id="profileInfo-display" name="ProductName" placeholder="Title Name"><br>
+            <input type="text" id="profileInfo-display" name="teamName" placeholder="Title Name"><br>
       
             <label for="profileInfo-username">Profile Info Username:</label>
-            <input type="text" id="profileInfo-username" name="ProductUsername" placeholder="@username"><br>
+            <input type="text" id="profileInfo-username" name="teamUsername" placeholder="@username"><br>
       
             <label for="profileInfo">Profile Info:</label>
             <textarea id="profileInfo" rows="4" cols="50" name="historyDescription"></textarea><br>
