--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -139,7 +139,7 @@
                 <th>Phone Number</th>
                 <th>Date Of Birth</th>
                 <th>Gender</th>
-                <th>Ban</th>
+                <th>Delete</th>
               </tr>
             </thead>
             <tbody>
