--- a/views/Admin.ejs
+++ b/views/Admin.ejs
@@ -65,51 +65,51 @@
 			<h3>Upload Image</h3>
 			<p>Image size must be less than <span>2MB</span></p>
 		</div>
-        <label for="file" class="select-image">Select Image</label>
+        <label for="file" class="select-image" required>Select Image</label>
       
 	</div>
 
                 <div class="button1" >
-                    <input type="text" name="title" placeholder="Add title">
+                    <input type="text" name="title" required placeholder="Add title">
 
        
         </div>
 
         
 
-        <div class="radiobuttons">
-            <input class="radio" type="radio" id="event" name="type" value="1">
+        <div class="radiobuttons" >
+            <input class="radio" type="radio" id="event" name="type" required value="1">
             <label class="label" for="event">Event</label>
-            <input class="radio" type="radio" id="match" name="type" value="2">
+            <input class="radio" type="radio" id="match" name="type" required value="2">
             <label class="label" for="match">Match</label>
         </div>
 
         
         <div class="button_2">
-            <textarea id="description" name="description" placeholder="Description" rows="8"></textarea>
+            <textarea id="description" name="description" required placeholder="Description" rows="8"></textarea>
         </div>
 
         <div class="location">
-            <input type="text" id="location" name="location" placeholder="Location">
+            <input type="text" id="location" name="location" required placeholder="Location">
         </div>
 
         <div class="date">
-            <input type="date" id="date" name="date" placeholder="Date">
+            <input type="date" id="date" name="date" required placeholder="Date">
         </div>
 
         <div class="tickets1">
-            <input type="number" id="numTickets" name="cat1" placeholder="Cat 1 No tickets">
-<input type="number" id="priceDropdown" name="cat1price" placeholder="Price $">
+            <input type="number" id="numTickets" name="cat1" required placeholder="Cat 1 No tickets">
+<input type="number" id="priceDropdown" name="cat1price" required placeholder="Price $">
 
         </div>
         <div class="tickets2">
-            <input type="number" id="numTickets" name="cat2" placeholder="Cat 1 No tickets">
-            <input type="number" id="priceDropdown" name="cat2price" placeholder="Price $">
+            <input type="number" id="numTickets" name="cat2" required placeholder="Cat 1 No tickets">
+            <input type="number" id="priceDropdown" name="cat2price"  required placeholder="Price $">
         </div>
 
             <div class="tickets3">
-            <input type="number" id="numTickets" name="cat3" placeholder="Cat 1 No tickets">
-            <input type="number" id="priceDropdown" name="cat3price" placeholder="Price $">
+            <input type="number" id="numTickets" name="cat3" required placeholder="Cat 1 No tickets">
+            <input type="number" id="priceDropdown" name="cat3price" required placeholder="Price $">
             
         </div>
 
