--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,7 +38,7 @@
 
 
   <div class="form">
-    <form name="valform" method="POST" action="/login">
+    <form name="valform" method="post" >
       <h1>Sign in</h1>
       <div class="inputs">
       <div><input type="text" id="user"name="email" placeholder="Enter your Email"></div>
