--- a/views/index.ejs
+++ b/views/index.ejs
@@ -176,8 +176,8 @@
 
     <div class="contact-container">
         <div class="contactus">
-            <h1>Contact Us</h1>
-            <h2>Questions? We're here to help</h2>
+            <h1>Feedback</h1>
+            <h2>your feedback will remain anonymous.</h2>
             <form action="/send-message" method="POST">
                 <input type="text" name="message" placeholder="Your Message" required>
                 <button type="submit">Send Message</button>
