--- a/views/Master.ejs
+++ b/views/Master.ejs
@@ -256,7 +256,7 @@
                     <h2 name="productPrice" style="color:green;">
                       <%= team.productPrice %> EGP
                     </h2>
-                    <button class="delete"id="ban" data-user-id="<%= team.id %>">Delete</button>
+                    <button class="deleteproduct" data-product-id="<%= team.id %>">Delete</button>
                     
                   </div>
                 </span>
@@ -410,6 +410,34 @@
 
 
 
+
+      
+
+
+
+
+
+
+document.addEventListener('DOMContentLoaded', function() {
+    const deleteButtons = document.querySelectorAll('.deleteproduct');
+    deleteButtons.forEach(button => {
+      button.addEventListener('click', function(e) {
+        const prodid = e.target.getAttribute('data-product-id');
+        fetch(`/Master/Delete-product/${prodid}`, {
+          method: 'DELETE'
+        })
+        .then(response => response.json())
+        .then(data => {
+          if (data.success) {
+            e.target.closest('.profile').remove();
+          } else {
+            alert('Error deleting ');
+          }
+        })
+        .catch(error => console.error('Error:', error));
+      });
+    });
+  });
 
 
      
