--- a/views/Store.ejs
+++ b/views/Store.ejs
@@ -79,7 +79,7 @@
                                 <h2 name="productPrice" style="color:green;">
                                     <%= team.productPrice %> EGP
                                 </h2>
-                                <h2>📍Available in all of our E7gzli stores</h2>
+                                <h2 id="ss">📍Available in all of our E7gzli stores</h2>
                             </div>
                         </span>
                     </div>
