--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <title>E7gzli</title>
     <link href="Style.css" rel="stylesheet">
     <script src="/script/loginval.js"></script>
-    <script src="/script/index.js"></script>
+    <script src="/script/script.js"></script>
     <script src="/script/loginval.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -108,21 +108,21 @@
                     <div class="holder_left">
                         <div class="holder">
                             <h3>Full Name: </h3>
-                            <input class="field_text" type="text" id="full_name" name="Fullname" placeholder="&nbsp &nbsp &nbsp FIRST SECOND NAME">
+                            <input required class="field_text" type="text" id="full_name" name="Fullname" placeholder="&nbsp &nbsp &nbsp FIRST SECOND NAME">
                         </div>
                         <div class="holder">
                             <h3>Email: &nbsp &nbsp &nbsp &nbsp </h3>
-                            <input class="field_text" type="Email" id="email" name="email" placeholder="&nbsp &nbsp &nbsp example@example.com">
+                            <input required class="field_text" type="Email" id="email" name="email" placeholder="&nbsp &nbsp &nbsp example@example.com">
                         </div>
                         <div class="holder">
                             <h3>Password: &nbsp</h3>
-                            <input class="field_text" type="password" id="pass" name="Password" placeholder="&nbsp &nbsp &nbsp************">
+                            <input required class="field_text" type="password" id="pass" name="Password" placeholder="&nbsp &nbsp &nbsp************">
                         </div>
                     </div>
                     <div class="holder_right">
                         <div class="holder">
                             <h3>Phone Number:</h1>
-                                <input class="field_text" type="number" id="phone_num" name="PhoneNumber" placeholder="&nbsp&nbsp&nbsp +020123456789">
+                                <input required class="field_text" type="number" id="phone_num" name="PhoneNumber" placeholder="&nbsp&nbsp&nbsp +020123456789">
                         </div>
                         <div class="holder">
                             <h3>Date of Birth: </h3>
