--- a/views/BookNow.ejs
+++ b/views/BookNow.ejs
@@ -57,9 +57,9 @@
             <div class="Area">
                 <div class="stadium">
                 <% if (event2.type == '1') { %>
-                    <img src="/materials/stage.png" alt="Match Image">
+                    <img src="/materials/stage.png" alt="event Image">
                 <% } else if (event2.type == '2') { %>
-                    <img src="/materials/stadium-right.svg" alt="Event Image">
+                    <img src="/materials/stadium-right.svg" alt="stadium Image">
                 <% } %>
     
                 <form id="formation" method="POST" action="/BuyTicket/<%= event2._id %>">
