--- a/views/BookNow.ejs
+++ b/views/BookNow.ejs
@@ -99,7 +99,7 @@
                   
                     <input type="hidden" name="ticketId" value="<%= event2._id %>">
                     
-                    <div class="Buttons">
+                    <div class="Buttonsxx">
                       <a href="/Browse" id="CN">Cancel</a>
                       <button id="BN" type="submit" >Buy Now</button>
                     </div>
